# ai2rules

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DECISIONS.md  PLAN.md  README.md
.claude/: cc-world.json  cc-world.yaml  settings.json
.claude/agents/: correcting-reviewer.md
.claude/commands/: review-blog.md
.claude/hooks/: _gatelib.py  demo-injection-egress.sh  demo-injection-egress.tape  taint-notify.py  test-gate.sh  world-gate-adapter.py  world-gate.py  world-gate.sh
.claude/hooks/superseded/: README.md  cc-world.json  demo-cross-agent.sh  test-gate-adapter.sh  test-gate.sh  world-gate-adapter.py
.github/workflows/: ci.yml  release.yml
.opencode/plugin/: ai2rules-gate.ts
_tasks/1_discovery/: pact-granularity-mismatch.md  spatial-scope-gap.md
_tasks/2_development/: hero-mcp-server.md  roots-path-scope.md  wm-modifications-mechanism.md
_tasks/3_advocacy/: hero-illustrations.md
_tasks/4_done/: blog-e12-correcting-review.md
blog/: DEPLOY.md  astro.config.mjs  package-lock.json  package.json
blog/public/casts/: demo-injection-egress.cast
blog/scripts/: check-heroes.sh
blog/social/: README.md  harness-blocked-itself.md
blog/src/: consts.ts
blog/src/components/: AsciinemaPlayer.astro  BaseHead.astro  Footer.astro  Header.astro  KernelPlayground.astro
blog/src/content/blog/: agent-harness-security-kernel.md  ai-aikido.md  false-positive-in-our-own-demo.md  governed-is-not-confined.md  harness-blocked-itself.md  permission-list-cant-see-taint.md  programmatic-tool-calling-governance.md  running-claude-safely.md  running-claude-safely.mdx  subagent-taint-experiment.md  the-zombieagent-threat.md  we-skipped-permissions-in-our-own-tool.md  why-deny-is-dangerous.md
blog/src/layouts/: BlogPost.astro
blog/src/pages/: about.astro  index.astro  playground.astro
blog/src/pages/blog/: index.astro
blog/src/styles/: global.css
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: agent_loop.rs  approvals_demo.rs  poisoned_knowledge_demo.rs  tools_demo.rs
crates/agent-core/src/: arg_provenance.rs  context.rs  intent.rs  lib.rs  model.rs  orchestrator.rs
crates/cli-harness/: Cargo.toml
crates/cli-harness/src/: cc_hook.rs  main.rs  mcp_gateway.rs  mock_jira.rs  serve.rs  shim.rs  ui.html
crates/cli-harness/tests/: cc_hook.rs  install_governance.rs  mcp_gateway.rs  mcp_gateway_atlassian.rs  one_kernel.rs  opencode_world.rs  shim.rs  trusted_harness_resolution.rs
crates/compiler/: Cargo.toml
crates/compiler/assets/: default_world.yaml
crates/compiler/src/: compile.rs  error.rs  hashing.rs  lib.rs  loader.rs
crates/executor/: Cargo.toml
crates/executor/src/: fs_guard.rs  handler.rs  lib.rs  transport.rs
crates/executor/src/handlers/: command.rs  mcp.rs  mod.rs  patch.rs  read.rs  web.rs
crates/harness-preview/: Cargo.toml
crates/harness-preview/src/: gate.rs  host.rs  lib.rs
crates/harness-types/: Cargo.toml
crates/harness-types/src/: action.rs  approval.rs  compiled.rs  decision.rs  descriptor.rs  error.rs  execution.rs  ids.rs  lib.rs  manifest.rs  perception.rs  provenance.rs  tool_call.rs
crates/harness-wasm/: Cargo.toml  smoke-test.cjs
crates/harness-wasm/demo/: index.html
crates/harness-wasm/src/: lib.rs
crates/provider-adapters/: Cargo.toml
crates/provider-adapters/src/: anthropic.rs  lib.rs
crates/trace-store/: Cargo.toml
crates/trace-store/examples/: trace_demo.rs
crates/trace-store/src/: approval.rs  bundle.rs  lib.rs  record.rs  redact.rs  replay.rs  store.rs
crates/world-kernel/: Cargo.toml
crates/world-kernel/examples/: execution_demo.rs  kernel_demo.rs  pact_witness.rs
crates/world-kernel/src/: disposition.rs  intent.rs  invariants.rs  lib.rs  schema.rs  spec.rs  taint.rs
docker/: Dockerfile  README.md  compose.yaml  run.sh
docker/egress-proxy/: Dockerfile  filter  tinyproxy.conf
docker/sut/: settings.replace.json
docs/: BLOG_PLAN.md  FLYWHEEL.md  GLOSSARY.md  PRINCIPLES.md  RESEARCH-BACKLOG.md  THESIS.md  THIRD-PARTY-ADOPTION.md  USE-CASES.md  approval-capable-hosts.md  harness-architecture-antigravity.md  harness-architecture-claude.md  harness-architecture-codex.md  harness-architecture.md  harness-gate-abi.md  one-kernel-many-hosts.md  trust-pins.md
docs/decks/: radware-agent-execution-governance.md
docs/demos/confluence-docs/: README.md  confluence-docs.world.yaml
docs/demos/jira-copilot/: README.md  REAL-ATLASSIAN.md  SCORECARD.md  jira-atlassian.world.yaml  jira-governed.world.yaml  jira-world.yaml  run-proxy.sh
docs/demos/jira-copilot/hosts/: claude-code-atlassian.mcp.json  claude-code.mcp.json  claude-code.settings.json  jetbrains.md  vscode-atlassian.mcp.json  vscode.mcp.json
docs/demos/one-kernel/: cases.yaml  demo-world.yaml
docs/demos/opencode/: README.md  opencode-world.yaml
docs/demos/replace-permissions/: README.md  demo.sh  settings.baseline.json
docs/papers/: hipporag2-vs-context-engine.md
docs/propositions/: claude-code.md  votes.md
scripts/: demo-one-kernel-many-hosts.sh  install-governance.sh  starter-world.yaml
tools/hero-mcp/: README.md  hero-profile.json  package-lock.json  package.json
tools/hero-mcp/src/: index.ts  lib.test.ts  lib.ts
