[package]
name = "cli-harness"
description = "Terminal entrypoint for the ai2rules harness (E9)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-types = { workspace = true }
harness-preview = { workspace = true }
agent-core = { workspace = true }
compiler = { workspace = true }
world-kernel = { workspace = true }
executor = { workspace = true }
provider-adapters = { workspace = true }
trace-store = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
inquire = "0.9.4"

[dev-dependencies]
serde_yaml = "0.9"
