[package]
name = "compiler"
description = "Manifest validation, descriptor hashing, and compilation to CompiledWorld (E1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-types = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"
