[package]
name = "harness-preview"
description = "Pure manifest→{surface, decision matrix} preview over the real compiler + kernel; shared by `harness serve` (E11) and the WASM engine (E14)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-types = { workspace = true }
world-kernel = { workspace = true }
compiler = { workspace = true }
serde_json = { workspace = true }
