[package]
name = "harness-types"
description = "Language-neutral core contracts for the ai2rules harness (architecture §5)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
