[package]
name = "trace-store"
description = "Append-only audit trace, redaction, deterministic replay, drift reports (E4)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-types = { workspace = true }
# Replay re-runs the kernel; bundles recompile a world. Both depend only on
# harness-types, so neither closes a cycle back onto trace-store.
world-kernel = { workspace = true }
compiler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
